WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
61559
Transition to full screen video animates in wrong location when scrolled
https://bugs.webkit.org/show_bug.cgi?id=61559
Summary
Transition to full screen video animates in wrong location when scrolled
Jon Lee
Reported
2011-05-26 14:14:48 PDT
<
rdar://problem/9496054
>
Attachments
Patch
(12.39 KB, patch)
2011-05-26 15:02 PDT
,
Jon Lee
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jon Lee
Comment 1
2011-05-26 15:02:29 PDT
Created
attachment 95050
[details]
Patch
Darin Adler
Comment 2
2011-05-26 16:54:23 PDT
Comment on
attachment 95050
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=95050&action=review
> Source/WebKit2/WebProcess/FullScreen/mac/WebFullScreenManagerMac.h:56 > + void animateFullScreen(CATransform3D startTransform, CATransform3D endTransform, float duration, id listener);
Should these arguments be const CATransform3D& instead of passing by value?
Jon Lee
Comment 3
2011-05-26 17:27:24 PDT
(In reply to
comment #2
)
> (From update of
attachment 95050
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=95050&action=review
> > > Source/WebKit2/WebProcess/FullScreen/mac/WebFullScreenManagerMac.h:56 > > + void animateFullScreen(CATransform3D startTransform, CATransform3D endTransform, float duration, id listener); > > Should these arguments be const CATransform3D& instead of passing by value?
Good suggestion. Taken.
Jon Lee
Comment 4
2011-05-26 17:29:57 PDT
Committed
r87456
: <
http://trac.webkit.org/changeset/87456
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug